--- a/teste2b/src/style/style.css
+++ b/teste2b/src/style/style.css
@@ -3,3 +3,20 @@
     margin: 0;
    
 }
+
+.rotas{
+    width: 90%;
+    height: 300px;
+    background-color:transparent;
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+.rotas a{
+    font-size: 28px;
+    cursor: pointer;
+}
