--- a/teste2b/src/style/style.css
+++ b/teste2b/src/style/style.css
@@ -20,3 +20,12 @@
     font-size: 28px;
     cursor: pointer;
 }
+
+.slider{
+    width: 290px;
+    height: 400px;
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+}
