--- a/teste2b/src/style/style.css
+++ b/teste2b/src/style/style.css
@@ -3,6 +3,9 @@
     margin: 0;
    
 }
+.App{
+    overflow-y: hidden;
+}
 
 .rotas{
     width: 90%;
@@ -28,4 +31,18 @@
     margin-right: auto;
     position: relative;
    
+}
+.sectionHome div h3{
+    width: 100%;
+    height: 30px;
+    padding-top: 30px;
+    text-align: justify;
+}
+.sectionHome div p{
+    width: 100%;
+    height: auto;
+    text-align: justify;
+    font-size: 16px;
+    color:grey;
+    
 }
