--- a/teste2b/src/style/style.css
+++ b/teste2b/src/style/style.css
@@ -30,7 +30,7 @@
     margin-left: auto;
     margin-right: auto;
     position: relative;
-   
+    
 }
 .sectionHome div h3{
     width: 100%;
@@ -45,4 +45,23 @@
     font-size: 16px;
     color:grey;
     
+}
+
+footer form input::placeholder{
+    font-size: 16px;
+    padding-left: 10px;
+}
+
+footer div.finalfooter{
+    width: 50%;
+    height: 100px;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+footer  .pfooter{
+    text-transform: uppercase;
+    font-size: 15px;
 }
