Layout Mobile e tablet finalizado.

--- a/teste2b/src/style/style.css
+++ b/teste2b/src/style/style.css
@@ -65,3 +65,10 @@ footer  .pfooter{
     text-transform: uppercase;
     font-size: 15px;
 }
+
+@media(min-width: 768px){
+    .slider{
+        grid-column-start:3;
+       
+    }
+  }
