finalizando ajuste tela 1920

--- a/teste2b/src/style/style.css
+++ b/teste2b/src/style/style.css
@@ -96,3 +96,9 @@ footer  .pfooter{
         width:490px;
     }
    }
+
+   @media ( min-width:1920px){
+    .slider{
+        width:590px;
+    }
+   }
